--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Let's make it special for her."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +25,6 @@
     <title>Farewell Card Atreyee</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
